# RE5MemTools

./: .gitignore  CMakeLists.txt  CMakeSettings.json  output.apre5
include/: BaseClasses.h  Items.h  RE5Items.h  RE5LocationData.h  RE5Text.h  Text.h
src/: Items.cpp  RE5Items.cpp  RE5LocationData.cpp  RE5Text.cpp  Text.cpp
tests/: test_Items.cpp  test_LocationData.cpp  test_Text.cpp
